infrastructure/gatewayapi/apigateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-http-gateway
  namespace: customer1
  annotations:
    networking.gke.io/certmap: gateway-cert-map
spec:
  gatewayClassName: gke-l7-global-external-managed  # Use gke-l7-global-external-http for external, or gke-l7-rilb for internal
  
  listeners:
  - name: https 
    protocol: HTTPS 
    port: 443
    hostname: "*"
    allowedRoutes:
      namespaces:
        from: All
